@@ -209,6 +209,8 @@
                             com.swardana.nayanika/com.swardana.nayanika.gui=ALL-UNNAMED
                         --add-opens
                             com.swardana.nayanika/com.swardana.nayanika.gui.about=ALL-UNNAMED
+                        --add-opens
+                            com.swardana.nayanika/com.swardana.nayanika.gui.frame=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
